# fractalization

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FractalizationConfig.cmake.in
include/fractalization/: generator.hpp  mandelbrot_ascii_gen.hpp  mandelbrot_grayscale_gen.hpp
include/fractalization/components/: transformation.hpp
include/fractalization/components/fractal/: mandelbrot.hpp
include/fractalization/components/output/: ascii.hpp  grayscale_rgba.hpp
samples/: CMakeLists.txt
samples/ascii/: CMakeLists.txt  fractalization_ascii.cpp
samples/sfml/: CMakeLists.txt  fractalization_sfml.cpp  fractalization_sprite.cpp  fractalization_sprite.hpp
tests/: CMakeLists.txt  fractalization_tests.cpp  generator.cpp  mandelbrot_ascii_gen.cpp  mandelbrot_grayscale_gen.cpp
tests/components/: transformation.cpp
tests/components/fractal/: mandelbrot.cpp
tests/components/output/: ascii.cpp  grayscale_rgba.cpp
